--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -443,5 +443,7 @@
   "messageDeletedPlaceholder": "This message has been deleted",
   "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey"
+  "goToOurSurvey": "Go to our survey",
+  "operatingSystem": "Operating System: $operatingSystem$\n",
+  "commitHash": "Git Commit SHA: $commitHash$\n"
 }
